force-app/main/default/objects/PowerBiReportDetailConfig__mdt/PowerBiReportDetailConfig__mdt.object-meta.xml
<CustomObject>
    <label>PowerBiReportDetailConfig</label>
    <pluralLabel>PowerBiReportDetailConfig</pluralLabel>
</CustomObject>