force-app/main/default/objects/PowerBiReportDetailConfig__mdt/fields/Key_Value__c.field-meta.xml
<CustomField>
    <fullName>Key_Value__c</fullName>
    <label>Fields for Report Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>