force-app/main/default/objects/PowerBiReportDetailConfig__mdt/fields/ObjectAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPI__c</fullName>
    <label>ObjectAPI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>