force-app/main/default/objects/PowerBiReportDetailConfig__mdt/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>ReportName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>